--- a/index.html
+++ b/index.html
@@ -13,10 +13,51 @@
 <body>
     
   <header>
-
+    <h1 class="container w-auto p-3 bg-dark text-light">Weather Dashboard</h1>
   </header>
   
   <main>
+    <!-- Container to hold all information -->
+    <div class="container border w-auto p-3">
+      <div class="row">
+        <div class="col-3 border bg-light">
+          <h3>Search for a City:</h3>
+          <div class="input-group">
+            <input type="text" class="form-control" id="city-submit" placeholder="Name a City">
+            <div class="input-group-append">
+              <button type="button" class="btn btn-primary"><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-search" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" d="M10.442 10.442a1 1 0 0 1 1.415 0l3.85 3.85a1 1 0 0 1-1.414 1.415l-3.85-3.85a1 1 0 0 1 0-1.415z"/>
+                <path fill-rule="evenodd" d="M6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11zM13 6.5a6.5 6.5 0 1 1-13 0 6.5 6.5 0 0 1 13 0z"/>
+              </svg></button>
+            </div>
+          </div>
+          <!-- This unordered list will hold my search history -->
+          <ul class="list-group">
+            <li class="list-group-item">Cras justo odio</li>
+            <li class="list-group-item">Dapibus ac facilisis in</li>
+            <li class="list-group-item">Morbi leo risus</li>
+            <li class="list-group-item">Porta ac consectetur ac</li>
+            <li class="list-group-item">Vestibulum at eros</li>
+          </ul>
+        </div>
+        <!-- This is where today's forecast will go -->
+        <div class="col-9 border">
+          <div class="border" id="todays-forecast">
+            hello
+          </div>
+          <h5 id="five-day-title">Five Day Forecast</h5>
+          <!-- This is where the five day forecast will go -->
+          <div class="border d-flex flex-row justify-content-around align-items-center" id="five-day-forecast">
+            <p>Append cards here</p>
+            <p>and here</p>
+            <p>and here</p>
+            <p>and here</p>
+            <p>and here</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
 
   </main>
 
