API call but I cannot test it because it takes a while for my api key to start working

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
   <link rel="stylesheet" href="./assets/css/styles.css" />
-  <title>Git it Done</title>
+  <title>The Best Weather Dashboard in the World</title>
 </head>
 
 <body>
@@ -47,8 +47,12 @@
           </div>
           <h5 id="five-day-title">Five Day Forecast</h5>
           <!-- This is where the five day forecast will go -->
-          <div class="border d-flex flex-row justify-content-around align-items-center" id="five-day-forecast">
-            <p>Append cards here</p>
+          <div class="border d-flex flex-row justify-content-around align-items-center p-3" id="five-day-forecast">
+            <div class="badge badge-primary p-3 text-left">
+              <!--<h6>8/16/2019</h6>
+              <p>Temp: 86.84</p>
+              <p>Humidity: 43%</p> -->
+            </div>
             <p>and here</p>
             <p>and here</p>
             <p>and here</p>
