I am successfully populating my today's weather section

--- a/index.html
+++ b/index.html
@@ -38,11 +38,9 @@
             <li class="list-group-item">Vestibulum at eros</li>
           </ul>
         </div>
-        <!-- This is where today's forecast will go -->
         <div class="col-9 border">
-          <div class="border" id="todays-forecast">
-            hello
-          </div>
+          <!-- This div will hold all today's information -->
+          <div class="border" id="todays-forecast"></div>
           <h5 id="five-day-title">Five Day Forecast</h5>
           <!-- This is where the five day forecast will go -->
           <div class="border d-flex flex-row justify-content-around align-items-center p-3" id="five-day-forecast">
