Appending cities to list, saving in local storage, and populating the list with local storage upon refresh

--- a/index.html
+++ b/index.html
@@ -30,18 +30,12 @@
             </svg></button>
           </form>
           <!-- This unordered list will hold my search history -->
-          <ul class="list-group">
-            <li class="list-group-item">Cras justo odio</li>
-            <li class="list-group-item">Dapibus ac facilisis in</li>
-            <li class="list-group-item">Morbi leo risus</li>
-            <li class="list-group-item">Porta ac consectetur ac</li>
-            <li class="list-group-item">Vestibulum at eros</li>
-          </ul>
+          <ul class="list-group" id="city-list"></ul>
         </div>
         <div class="col-9 border">
           <!-- This div will hold all today's information -->
           <div class="border" id="todays-forecast"></div>
-          <h5 id="five-day-title">Five Day Forecast</h5>
+          <h5 id="five-day-title"></h5>
           <!-- This is where the five day forecast will go -->
           <div class="border d-flex flex-row justify-content-around align-items-center p-3" id="five-day-forecast">
           </div>
