--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="row">
         <div class="col-lg-3 col-md-12 bg-light">
           <h3>Search for a City:</h3>
-          <form class="input-group" id="input-group">
+          <form class="input-group" id="input-group" autocomplete="off">
             <input type="text" id="city-name" placeholder="Name a City">
             <button type="submit" class="btn btn-primary input-group-append" id="submit-button"><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-search" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
               <path fill-rule="evenodd" d="M10.442 10.442a1 1 0 0 1 1.415 0l3.85 3.85a1 1 0 0 1-1.414 1.415l-3.85-3.85a1 1 0 0 1 0-1.415z"/>
